# travel-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
docs/: architecture.md  deploy-api-render.md  deploy-railway-frontend.md  deploy-vercel.md  edgecase.md  evals.json  implementation-plan.md  problemStatement.md  problemstatement.txt
examples/: europe_10day.sh  jaipur_4day.sh  japan_5day.sh
frontend/: Dockerfile  next.config.js  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AgentTrace.tsx  ItineraryView.tsx  TripForm.tsx
frontend/lib/: api.ts  types.ts
prompts/: accommodation.md  budget_analyst.md  destination_research.md  intent_parser.md  itinerary_builder.md  logistics.md  validator.md
src/: context.py  main.py  orchestrator.py  plan_output.py  stub_data.py
src/agents/: __init__.py  accommodation.py  base.py  budget_analyst.py  destination_research.py  intent_normalizer.py  intent_parser.py  itinerary_builder.py  llm_schemas.py  logistics.py  prompt_context.py  validator.py
src/api/: __init__.py  config.py  main.py  schemas.py  service.py  session_store.py
src/data/: __init__.py  accommodation.py  base.py  budget.py  destination.py  registry.py  seeds.py  transport.py
src/llm/: __init__.py  agent_models.yaml  config.py  providers.py  rate_limiter.py  (+1 more)
tests/: test_api.py  test_context.py  test_data_providers.py  test_e2e.py  test_intent_normalizer.py  test_llm_config.py  test_orchestrator.py  test_schemas.py
(+17 files in other folders)
