[project]
name = "travel-agent"
version = "0.1.0"
description = "Multi-agent AI travel planner"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0",
    "groq>=0.13.0",
    "google-generativeai>=0.8.0",
    "structlog>=24.0",
    "typer>=0.12.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "e2e: end-to-end and CLI tests (offline, no API)",
]
